# goit-pythonweb-hw-06

./: README.md  models.py  my_select.py  pyproject.toml  seed.py
