[tool.poetry]
name = "goit-pythonweb-hw-06"
version = "0.1.0"
description = ""
authors = ["LesyaTkachuk <lesyalesya9876@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
black = "^24.10.0"
psycopg2-binary = "^2.9.10"
faker = "^33.0.0"
tabulate = "^0.9.0"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
